# fast-autoaugment

./: requirements.txt  setup.cfg
FastAutoAugment/: common.py  data.py  metrics.py  search.py  train.py
FastAutoAugment/networks/efficientnet_pytorch/: condconv.py
