# Ref: Configuring setup() using setup.cfg files
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#configuring-metadata
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#
[metadata]
name = fast-autoaugment-pkg-jr
version = 0.0.3
# author = Example Author
# author_email = author@example.com
# description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

# automatically find all packages in the `where` directory
[options.packages.find]
where = .
